[tool.poetry]
name = "p1-influx-db"
version = "0.1.0"
description = "Parsing P1 serial to Influx DB"
authors = ["Yorick Fredrix <yorick.fredrix@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dsmr-parser = "^1.3.1"
influxdb-client = "^1.39.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
